--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-* {
+/** {
     box-sizing: border-box;
 }
 body {
@@ -7,25 +7,25 @@ body {
     margin: 0;
 }
 
-/* Header */
+ Header 
 .header {
-    position: fixed; /* Co dinh vi tri cua phan tu khi cuon trang */
+    position: fixed;  Co dinh vi tri cua phan tu khi cuon trang 
     top: 0;
     left: 0;
     right: 0;
     background-color: #f63;
     height: 120px;
-    z-index: 100; /* z index lớn hơn sẽ đè lên cái bé hơn */
+    z-index: 100;  z index lớn hơn sẽ đè lên cái bé hơn 
 }
 .header-top {
     height: 20%;
-    background-color: transparent; /* Mau nen trong suot*/
-    position: relative; /*Dinh vi vi tri tuong doi cua phan tu*/
+    background-color: transparent;  Mau nen trong suot
+    position: relative; Dinh vi vi tri tuong doi cua phan tu
     color: white;
 }
 .navbar-link {
     margin: 2px;
-    display: flex; /*Chia thanh nhieu khoi (nhu 1 hang execl)*/
+    display: flex; Chia thanh nhieu khoi (nhu 1 hang execl)
     float: right;
 }
 .navbar-link a {
@@ -39,7 +39,7 @@ body {
     height: 80%;
     background: transparent;
     display: flex;
-    justify-content: space-between; /* chia đều các ô trên 1 dòng flex, đầu sát đầu dòng, cuối sát cuối dòng */
+    justify-content: space-between;  chia đều các ô trên 1 dòng flex, đầu sát đầu dòng, cuối sát cuối dòng 
     align-items: center;
 }
 .logo {
@@ -54,7 +54,7 @@ body {
     height: 36%;
     box-shadow: 0 0, 125rem 0, 25rem rgba(0, 0, 0, 0, 09);
     border-radius: 4px;
-    flex-grow: 1; /* chiếm hết khoảng trắng còn lại trên dòng flex */
+    flex-grow: 1;  chiếm hết khoảng trắng còn lại trên dòng flex 
 }
 .search-input {
     flex-grow: 1;
@@ -76,7 +76,7 @@ body {
     padding-left: 10px;
 }
 .search-button {
-    justify-content: flex-end; /* đặt item về cuối dòng flex */
+    justify-content: flex-end;  đặt item về cuối dòng flex 
     background-color: #fb5533;
     margin: 4px;
     border-radius: 4px;
@@ -98,21 +98,21 @@ body {
     margin-left: 100px;
     padding-right: 50px;
 }
-/* end Header */
+ end Header 
 
-/* Noi dung ở giữa trang web */
+ Noi dung ở giữa trang web 
 .content {
-    margin-top: 120px; /* đủ để cách header */
-    overflow: auto; /* tạo thanh cuộn khi nội dung tràn -> tránh Margin Collapse*/
+    margin-top: 120px;  đủ để cách header 
+    overflow: auto;  tạo thanh cuộn khi nội dung tràn -> tránh Margin Collapse
 }
 
-/* Cac kieu phan trang o phan noi dung */
+ Cac kieu phan trang o phan noi dung 
 .container-flex {
     display: flex;
     margin: 20px 4px;
 }
 
-/* trang home */
+ trang home 
 .catagories {
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.25);
     flex: 0 0 12rem;
@@ -132,7 +132,7 @@ body {
 }
 .catagories-list {
     padding: 40px 0 40px 0;
-    list-style: none; /* chỉ đinh thuộc tính cho các phẩn tử trong list */
+    list-style: none;  chỉ đinh thuộc tính cho các phẩn tử trong list 
     color: rgba(0, 0, 0, 0.8);
 }
 .catagories-list li a {
@@ -140,37 +140,37 @@ body {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.8);
     overflow: hidden;
-    text-overflow: ellipsis; /* text tràn thì hiển thị ... */
+    text-overflow: ellipsis;  text tràn thì hiển thị ... 
     padding: 0.5rem 0.625rem 0.5rem 0.75rem;
     position: relative;
-    line-height: 2rem; /* chiều cao dòng của phần tử */
+    line-height: 2rem;  chiều cao dòng của phần tử 
 }
 .catagories-list li a:hover {
     color: rgba(33, 30, 228, 1);
 }
 
 .products {
-    flex: 1; /* chiếm hết màn hình còn lại trên dòng flex */
+    flex: 1;  chiếm hết màn hình còn lại trên dòng flex 
     width: 0;
     min-width: 0;
 }
 .products-list {
     display: flex;
-    flex-wrap: wrap; /* bọc các phần tử con */
-    flex-direction: row; /* sắp xếp các phần tử tử trái sang phải */
+    flex-wrap: wrap;  bọc các phần tử con 
+    flex-direction: row;  sắp xếp các phần tử tử trái sang phải 
     flex: 0 1 auto;
 }
 .product {
-    flex-basis: 25%; /* chỉ định độ dài ban đầu của phần tử trong flex */
-    max-width: 25%; /* độ dài tối đa của phần tử so với phần tử chứa nó*/
-    flex: 0 0 auto; /* đặt tất cả phần tử trong flex có cùng độ dài */
+    flex-basis: 25%;  chỉ định độ dài ban đầu của phần tử trong flex 
+    max-width: 25%;  độ dài tối đa của phần tử so với phần tử chứa nó
+    flex: 0 0 auto;  đặt tất cả phần tử trong flex có cùng độ dài 
     min-width: 200px;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
     margin: 0.5rem 0;
     box-sizing: border-box;
     width: 25%;
-    line-height: 1.2rem; /* chiều cao dòng */
+    line-height: 1.2rem;  chiều cao dòng 
 }
 .product-view {
     display: block;
@@ -202,14 +202,14 @@ body {
     display: block;
 }
 .product-info #name-product {
-    white-space: nowrap; /* hiển thị trên 1 dòng */
+    white-space: nowrap;  hiển thị trên 1 dòng 
     display: inline-block;
     width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 .product-info #price-product {
-    white-space: nowrap; /* hiển thị trên 1 dòng */
+    white-space: nowrap;  hiển thị trên 1 dòng 
     display: inline-block;
     width: 100%;
     color: #ee4d2d;
@@ -231,9 +231,9 @@ body {
     outline: none;
     cursor: pointer;
 }
-/* end Home page */
+ end Home page 
 
-/* Footer */
+ Footer 
 .footer {
     height: 100px;
     background-color: rgba(117, 111, 115, 0.062);
@@ -244,9 +244,9 @@ body {
     margin: auto;
     text-align: center;
 }
-/* end Footer */
+ end Footer 
 
-/* kẻ chia cẳt */
+ kẻ chia cẳt 
 .line {
     width: 2px;
     height: 60px;
@@ -254,7 +254,7 @@ body {
     background-color: white;
 }
 
-/* Các phần form */
+ Các phần form 
 .container-form {
     display: flex;
     align-items: center;
@@ -278,9 +278,9 @@ body {
 .signup-label {
     font-size: 14px;
     color: #1c1d1f;
-    font-weight: 500; /* độ đậm  của phông chữ */
+    font-weight: 500;  độ đậm  của phông chữ 
     margin-bottom: 10px;
-    display: inline-block; /* khác với inline là cho phép đặt cao/rộng */
+    display: inline-block;  khác với inline là cho phép đặt cao/rộng 
     cursor: pointer;
 }
 .signup-input {
@@ -289,7 +289,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     background-color: #f2f3f5;
-    outline: none; /* tắt viền */
+    outline: none;  tắt viền 
     border: 0;
     font-size: 16px;
     margin-bottom: 30px;
@@ -306,7 +306,7 @@ body {
     background-color: #ee4d2d;
     cursor: pointer;
     font-weight: 600;
-    display: inline-block; /* thêm để tránh Margin Collapse */
+    display: inline-block;  thêm để tránh Margin Collapse 
     margin-top: 25px;
     margin-bottom: 25px;
 }
@@ -329,7 +329,7 @@ body {
     margin-bottom: 40px;
 }
 
-/* Xem chi tiết sản phẩm */
+ Xem chi tiết sản phẩm 
 .container-product {
     display: flex;
     margin: 20px 150px;
@@ -343,7 +343,7 @@ body {
     margin: 0 1.5rem 1.5rem 0;
 }
 .right {
-    flex: 1; /* chiếm hết màn hình còn lại trên dòng flex */
+    flex: 1;  chiếm hết màn hình còn lại trên dòng flex 
     width: 0;
     min-width: 0;
     border-left: 1px solid rgba(0, 0, 0, 0.05);
@@ -361,7 +361,7 @@ body {
     padding-bottom: 4px;
 }
 
-/* giỏ hàng */
+ giỏ hàng 
 .container-cart {
     display: flex;
     flex-direction: column;
@@ -403,4 +403,595 @@ body {
     outline: none;
     cursor: pointer;
     margin: 0 40px; 
+}*/
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial;
+    background: #f5f5f5;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: blue;
+}
+
+li a:hover{
+    background: red;
+    border-radius: 8px;
+    color: white;
+}
+
+li {
+    display: inline-block;
+    text-align: center;
+    line-height: 40px;
+}
+
+li a{
+    display: block;
+    text-align: center;
+
+}
+
+input {
+    outline: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+/* Header */
+.header {
+    position: fixed;
+    /* Co dinh vi tri cua phan tu khi cuon trang */
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: red;
+    height: 120px;
+    z-index: 100;
+    /* z index lớn hơn sẽ đè lên cái bé hơn */
+}
+
+.header-top {
+    height: 25%;
+    background-color: transparent;
+    /* Mau nen trong suot*/
+    position: relative;
+    /*Dinh vi vi tri tuong doi cua phan tu*/
+    color: white;
+}
+
+.navbar-link {
+    margin: 0 20px;
+    display: flex;
+    /*Chia thanh nhieu khoi (nhu 1 hang execl)*/
+    float: right;
+}
+.navbar-link ul li {
+    margin-left: 10px;
+}
+
+.navbar-link a {
+    margin-right: 5px;
+    padding-right: 5px;
+    font-size: 15px;
+    text-decoration: none;
+    color: #f2f2f2;
+}
+
+.header-content {
+    height: 75%;
+    width: 60%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    /* chia đều các ô trên 1 dòng flex, đầu sát đầu dòng, cuối sát cuối dòng */
+    align-items: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.logo {
+    margin-right: 20px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.logo a {
+    color: black;
+}
+
+.search {
+    display: flex;
+    height: 36%;
+    box-shadow: 0 0, 125rem 0, 25rem rgba(0, 0, 0, 0, 09);
+    border-radius: 4px;
+    flex-grow: 1;
+    /* chiếm hết khoảng trắng còn lại trên dòng flex */
+}
+
+.search-input {
+    flex-grow: 1;
+    position: relative;
+    border: 0;
+}
+
+.search form {
+    width: 80%;
+    height: 100%;
+    align-items: center;
+    display: inline-flex;
+}
+
+.search form input {
+    outline: none;
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    padding-left: 10px;
+    border: solid 1px red;
+    border-radius: 20px;
+}
+
+.search-button {
+    background-color: red;
+    margin: 0px;
+    padding: 4px;
+    position: relative;
+    left: -33px;
+
+    border-radius: 20px;
+    display: flex;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: rgb(248, 111, 83);
+}
+
+.search-button img {
+    height: 80%;
+}
+
+.cart {
+    text-align: center;
+}
+
+/* end Header */
+
+/* Noi dung ở giữa trang web */
+.content {
+    margin-top: 120px;
+    /* đủ để cách header */
+    overflow: auto;
+    /* tạo thanh cuộn khi nội dung tràn -> tránh Margin Collapse*/
+    background: #f5f5f5;
+    min-height: 529px;
+}
+
+/* Cac kieu phan trang o phan noi dung */
+.container-flex {
+    display: flex;
+    margin: 20px 4px;
+}
+
+/* trang home */
+.catagories {
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.25);
+    flex: 0 0 12rem;
+    margin: 0 1.5rem 1.5rem 0;
+}
+
+.catagories-header {
+    font-weight: 700;
+    font-size: 1rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    text-transform: capitalize;
+    display: inline;
+    align-items: center;
+    height: 5rem;
+    padding-left: 4px;
+}
+
+.catagories-list {
+    list-style: none;
+}
+
+.catagories-list li {
+    width: 100%;
+}
+
+.catagories-list li a {
+    text-decoration: none;
+    overflow: hidden;
+    position: relative;
+    text-overflow: ellipsis;
+    /* text tràn thì hiển thị ... */
+}
+
+
+.products {
+    flex: 1;
+    /* chiếm hết màn hình còn lại trên dòng flex */
+    width: 0;
+    min-width: 0;
+}
+
+.products-list {
+    display: flex;
+    flex-wrap: wrap;
+    /* bọc các phần tử con */
+    flex-direction: row;
+    /* sắp xếp các phần tử tử trái sang phải */
+    flex: 0 1 auto;
+}
+
+.product {
+    flex-basis: 25%;
+    /* chỉ định độ dài ban đầu của phần tử trong flex */
+    max-width: 25%;
+    /* độ dài tối đa của phần tử so với phần tử chứa nó*/
+    flex: 0 0 auto;
+    /* đặt tất cả phần tử trong flex có cùng độ dài */
+    min-width: 200px;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    margin: 0.5rem 0;
+    box-sizing: border-box;
+    width: 25%;
+    line-height: 1.2rem;
+    /* chiều cao dòng */
+    text-align: center;
+}
+
+.product-view {
+    display: block;
+    position: relative;
+    overflow: visible;
+    text-decoration: none;
+    box-shadow: 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 0.25rem;
+    padding: 0;
+    background-color: #fff;
+}
+
+.product-img {
+    position: relative;
+    width: 100%;
+    padding-top: 100%;
+}
+
+.product-img #img-product {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 1;
+}
+
+.product-info {
+    padding: 0.625rem;
+    overflow: hidden;
+    display: block;
+}
+
+.product-info .name-product {
+    white-space: nowrap;
+    /* hiển thị trên 1 dòng */
+    display: inline-block;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.product-info .price-product {
+    white-space: nowrap;
+    /* hiển thị trên 1 dòng */
+    display: inline-block;
+    width: 100%;
+    color: #ee4d2d;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: 12px;
+}
+
+.btn-add-to-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-add-to-cart button {
+    background-color: #fb5533;
+    border-radius: 4px;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+/* end Home page */
+
+/* Footer */
+.footer {
+    background-color: rgba(117, 111, 115, 0.062);
+    text-align: left;
+}
+
+
+.footer p {
+    display: block;
+    margin: 10px 10px 0px 10px;
+    font-weight: 600;
+}
+
+.footer .copyright {
+    margin: auto;
+    text-align: center;
+}
+
+/* end Footer */
+
+/* kẻ chia cẳt */
+.line {
+    width: 2px;
+    height: 60px;
+    margin: 0 30px 0 40px;
+    background-color: white;
+}
+
+/* Các phần form */
+.container-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0;
+}
+
+.signup {
+    padding: 40px 20px;
+    background-color: #fff;
+    width: 100%;
+    max-width: 450px;
+    border-radius: 20px;
+}
+
+.signup-heading {
+    font-size: 40px;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.signup-label {
+    font-size: 14px;
+    color: black;
+    font-weight: 600;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.signup-input {
+    width: 100%;
+    margin: 8px 0;
+    padding: 4px 0;
+    border: none;
+    border-bottom: solid 1px red;
+    color: black;
+    outline: none;
+    background: none;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.signup-submit {
+    padding: 10px;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border: 0;
+    outline: none;
+    width: 100%;
+    border-radius: 20px;
+    background-color: red;
+    cursor: pointer;
+    font-weight: 600;
+    display: inline-block;
+    /* thêm để tránh Margin Collapse */
+    margin-bottom: 25px;
+}
+
+.signup-already {
+    text-align: center;
+    font-size: 16px;
+    color: gray;
+}
+
+.signup-login-link {
+    color: blue;
+    text-decoration: none;
+}
+
+.select-info {
+    display: block;
+    width: 100%;
+    padding: 6px;
+    border-radius: 10px;
+    background-color: #f2f3f5;
+    font-size: 16px;
+    margin-bottom: 40px;
+}
+
+/* Xem chi tiết sản phẩm */
+.container-product {
+    display: flex;
+    margin: 20px 150px;
+    background-color: #fff;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.25);
+}
+
+.left {
+    display: flex;
+    align-items: center;
+    flex: 0 0 24rem;
+    margin: 0 1.5rem 1.5rem 0;
+}
+
+.right {
+    flex: 1;
+    /* chiếm hết màn hình còn lại trên dòng flex */
+    width: 0;
+    min-width: 0;
+    border-left: 1px solid rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.product-detail {
+    width: 100%;
+    padding: 20px 16px 20px 16px;
+}
+
+.product-detail h3 {
+    font-weight: bold;
+    font-size: 120%;
+    padding-bottom: 4px;
+}
+
+/* giỏ hàng */
+.container-cart {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 4px;
+}
+
+.cart-detail {
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-collapse: collapse;
+}
+
+.cart-detail th,
+td {
+    text-align: center;
+    padding: 16px 8px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.btn-delete {
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.checkout {
+    margin: 40px 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+}
+
+.checkout label,
+span {
+    font-size: 110%;
+    padding-right: 10px;
+}
+
+#btn-checkout {
+    background-color: #fb5533;
+    border-radius: 4px;
+    padding: 10px;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 0 40px;
+}
+
+/*users/profile*/
+.profile {
+    max-width: 450px;
+    margin: auto;
+    margin-top: 40px;
+    padding: 40px 20px 10px 20px;
+    border-radius: 20px;
+    background: #fff;
+}
+
+
+.info-user ul li {
+    width: 100%;
+    text-align: left;
+}
+.fullname {
+    margin: 20px 10px 0px 10px;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.avatar {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.key {
+    display: inline-block;
+    width: 80px;
+}
+.admin-menu{
+    text-align: center;
+}
+
+.admin-menu li {
+    display: inline-block;
+    width: 15%;
+    line-height: 40px;
+    outline: none;
+    border: none;
+}
+
+.all-product {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.admin-edit *{
+    width: 100%;
+    outline: none;
+    margin-bottom: 10px;
+}
+
+
+.admin-edit {
+    width: 50%;
+    position: relative;
+    left: 10%;
+}
+
+.admin-button {
+    width: 40%;
+}
+
+.admin-textarea {
+    height: 100px;
 }
